<resources>
    <string name="app_name">Mebel+</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Menu</string>
    <string name="title_notifications">AR World</string>
    <string name="title_order">Order</string>
    <string name="title_profile">Profile</string>
    <string name="see_more">See more</string>
    <string name="price">Price:</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
